# routes/workouts.js
@@ -1,5 +1,6 @@
 const express = require('express');
 const router = express.Router();
+const { isAuthenticated } = require('../middleware/auth');
 const {
   getAllWorkouts,
   getWorkoutById,
@@ -10,8 +11,8 @@ const {
 
 router.get('/', getAllWorkouts);
 router.get('/:id', getWorkoutById);
-router.post('/', createWorkout);
-router.put('/:id', updateWorkout);
-router.delete('/:id', deleteWorkout);
+router.post('/', isAuthenticated, createWorkout);
+router.put('/:id', isAuthenticated, updateWorkout);
+router.delete('/:id', isAuthenticated, deleteWorkout);
 
 module.exports = router;
